Barcode DNI arreglado

--- a/TP_Comanda/android/app/src/main/assets/public/index.html
+++ b/TP_Comanda/android/app/src/main/assets/public/index.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8"/>
   <title>Ionic App</title>
 
-  <base href="/">
+  <base href="/"/>
 
-  <meta name="color-scheme" content="light dark">
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="color-scheme" content="light dark"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png">
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<style>:root{--ion-color-primary:#1e8593;--ion-color-primary-contrast:red;--ion-color-primary-shade:#000;--ion-color-primary-tint:#ff0;}html{--ion-font-family:var(--ion-default-font);}body{background:var(--ion-background-color);}@supports (padding-top: 20px){html{--ion-safe-area-top:var(--ion-statusbar-padding);}}@supports (padding-top: constant(safe-area-inset-top)){html{--ion-safe-area-top:constant(safe-area-inset-top);--ion-safe-area-bottom:constant(safe-area-inset-bottom);--ion-safe-area-left:constant(safe-area-inset-left);--ion-safe-area-right:constant(safe-area-inset-right);}}@supports (padding-top: env(safe-area-inset-top)){html{--ion-safe-area-top:env(safe-area-inset-top);--ion-safe-area-bottom:env(safe-area-inset-bottom);--ion-safe-area-left:env(safe-area-inset-left);--ion-safe-area-right:env(safe-area-inset-right);}}*{box-sizing:border-box;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;}html{width:100%;height:100%;-webkit-text-size-adjust:100%;text-size-adjust:100%;}html:not(.hydrated) body{display:none;}body{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;margin:0;padding:0;position:fixed;width:100%;max-width:100%;height:100%;max-height:100%;text-rendering:optimizeLegibility;overflow:hidden;touch-action:manipulation;-webkit-user-drag:none;-ms-content-zooming:none;word-wrap:break-word;overscroll-behavior-y:none;-webkit-text-size-adjust:none;text-size-adjust:none;}html{font-family:var(--ion-font-family);}body{--ion-background-color:none;background:linear-gradient(55deg,#adfbc2 25%,#f9ffee 50%,#ffefa7 75%)!important;}</style><link rel="stylesheet" href="styles.badff497661bc077973c.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.badff497661bc077973c.css"></noscript></head>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+<link rel="stylesheet" href="styles.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.26d3c282359fc2a1549b.js" defer></script><script src="polyfills.90f1bb55de28ef6def82.js" defer></script><script src="main.72ae9d616a0624d1f16f.js" defer></script>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
-
-</body></html>
+</html>
